2010-05-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp: Fix FIXME by reffing self during a timeout.

2010-05-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-proxy.cpp: Fix compiler warning.

2010-05-12  Chris Toshok  <toshok@ximian.com>

	* plugin-proxy.cpp (load): we don't need the libmoon.so.0 part
	since we don't install the System.Windows.dll.config file into the
	plugin directory anymore.

2010-05-12  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp: Line-break the ReportException javascript code so that it can be
	understood by humans. Add code to detect if we don't have a parent (which may
	happen if we've been detached from the DOM) and use the window object instead
	in that case. Fixes #352.

2010-05-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: Make plugin.cpp depend on plugin-spinner.h.

2010-05-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp|h:
	* plugin-spinner.xaml: Add a progress meter to the default plugin spinner.

2010-05-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: Generate plugin-spinner.h

	* plugin-spinner.h: Removed, it's generated now.

2010-05-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp: Add link to mozilla bug in comment.

2010-05-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp: It's not an error to have a stream with no StreamNotify data.
	Firefox will automatically create a stream for any src attribute on the embed
	tag.

2010-05-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp|h: Rework the file downloading to only use the streaming NPAPI
	interface. We can't trust that the file we get from firefox otherwise is
	complete, the file might be truncated if it didn't fit in firefox' cache.
	Also clean up StreamNotify a bit, remove unused ctors and make the code
	look more like the rest of moonlight.

	This makes DRT #425 load.

2010-05-06  Jeffrey Stedfast  <fejj@novell.com>
